School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_If_While/test_while.deca
//
//

{
    int i = 20;
    while(i>2)
    {
    	println(i, "salut");
    	i = i - 1;
    }
}