School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_If_While/while_Int.deca
// While avec un int
{
    while(1){
        print("infini");
    }
}